--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 .display-flex{
     display: flex;
 }
+.text-primary{
+    color: #FF900E;
+}
 .text-gray{
     color: #424242;
 }
@@ -20,6 +23,24 @@
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
 }
+.btn-primary{
+    background-color: rgba(255, 144, 14, 1);
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: 0;
+}
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
+
 /* Header Styles */
 
 /* Navbar related styles*/
@@ -49,8 +70,54 @@
     max-width: 850px;
     margin: 0 auto;
     text-align: center;
+    margin-bottom: 50px;
 }
 .banner-title{
     font-weight: 700;
     font-size: 4rem;
+}
+.banner img{
+    width: 100%;
+}
+
+/* team and feature related style */
+.teams{
+    align-items: center;
+}
+.team-image-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.quick-list{
+    font-weight: 500;
+}
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links, .teams{
+        flex-direction: column;
+    }
+    .team-image-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* Medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px){
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
 }
