added sponsor section with responsive

--- a/style.css
+++ b/style.css
@@ -135,22 +135,43 @@ main > section{
     grid-template-columns: repeat(4, 1fr) ;
 }
 
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    filter: grayscale(100%);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-image-container, .facts-container{
+    .team-image-container, .facts-container, .sponsor-companies{
         grid-template-columns: 1fr;
     }
     .our-features{
         margin-left: 20px;
     }
-    .facts-container{
+    .facts-container {
         justify-items: center;
         gap: 24px;
     }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
 }
+
 
 /* Medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px){
@@ -159,5 +180,10 @@ main > section{
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
